--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "nodemon": "^2.0.6",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {},
