--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "consign": "^0.1.6",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.6",
