--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "Chat-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app.js",
   "dependencies": {
-    "consign": "^0.1.6",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
@@ -12,7 +11,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "production": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
